--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,6 @@ project(":core") {
         api "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         api "com.badlogicgames.ashley:ashley:$ashleyVersion"
         api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
-        api "net.onedaybeard.artemis:artemis-odb:2.3.0"
+        api "com.badlogicgames.gdx:gdx-ai:1.8.1"
     }
 }
